# moonbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
moonbox/: __init__.py
scripts/: eda.ipynb
tests/: test_moonbox.py
tests/data/: celnav.json  mock.db  phases.json
