[tool.poetry]
name = "moonbox"
version = "0.1.0"
description = ""
authors = ["Scott Olesen <ulp7@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.0.2"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
